--- a/about.html
+++ b/about.html
@@ -91,9 +91,33 @@
                     <p><a class="btn btn-secondary zoom-in" href="#" role="button">Contacter »</a></p>
                 </div><!-- /.col-lg-6 -->
             </div>
-            <div class="row  p-4"></div>
-            <div class="row hideme p-3 text-light justify-content-center text-center ">
-                <div class="col-sm-12 p-5 pt-2 text-center text-light ">
+            <div class="row p-4 hideme text-light justify-content-center text-center">
+                <div class="col-10">
+                    <div class="display-4">Et ensemble on s'est lancé dans ce projet !</div>
+                </div>
+            </div>
+            <div class="row p-4"></div>
+            <div class="row p-4 hideme text-light justify-content-center text-center">
+                <div class="col-lg-8">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m46!1m12!1m3!1d6156878.396436032!2d-6.114869462234838!3d41.10639474550101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m31!3e0!4m5!1s0x12c91b027b35b2fd%3A0x40819a5fd8fc830!2sToulon!3m2!1d43.124227999999995!2d5.928!4m5!1s0x12b6af0725dd9db1%3A0xad8756742894e802!2sMontpellier!3m2!1d43.610769!2d3.8767159999999996!4m5!1s0x12a49816718e30e5%3A0x44b0fb3d4f47660a!2sBarcelone!3m2!1d41.3873974!2d2.168568!4m5!1s0xd604f4cf0efb06f%3A0xb4a351011f7f1d39!2sValence%2C%20Espagne!3m2!1d39.4699075!2d-0.37628809999999996!4m5!1s0xd19331a61e4f33b%3A0x400ebbde49036d0!2sLisbonne%2C%20Portugal!3m2!1d38.722252399999995!2d-9.1393366!5e0!3m2!1sfr!2sfr!4v1648377429427!5m2!1sfr!2sfr"
+                        style="border:0; width:-webkit-fill-available; height:100%;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+                <div class="col-lg-4">
+                    <ul class="list-unstyled">
+                        <li class="display-4 pb-3 fw-bold text-decoration-underline">Roadmap</li>
+                        <li class="h5 p-1">TOULON->LISBONNE</li>
+                        <li class="h5 p-1">-1812 KMs</li>
+                        <li class="h5 p-1">-19H de route</li>
+                        <li class="h5 p-1">et max de fun !</li>                        
+                    </ul>
+                </div>
+            </div>
+            <div class="row p-2"></div>
+            <div class="row hideme p-4 text-light justify-content-center text-center ">
+                <div class="col-sm-12 p-5 text-center text-light ">
                     <p class="display-5 ">Notre passion pour la musique </p>
                 </div>
                 <div class="col text-center p-4 ">
@@ -125,4 +149,5 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 </body>
+
 </html>
