--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-sm-2 d-none d-sm-block">
             </div>
         </div>
-        <div class="row p-3" style="padding:2vw ;padding-top: 0;">
+        <div class="row p-4 m-4" style="padding-top: 0;">
             <div id="carouselExampleControls" class="carousel" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
