--- a/about.html
+++ b/about.html
@@ -91,9 +91,11 @@
                     <p><a class="btn btn-dark zoom-in" href="#" role="button">Contacter »</a></p>
                 </div><!-- /.col-lg-6 -->
             </div>
+            <div class="row p-4"></div>
             <div class="row p-4 hideme text-light justify-content-center text-center">
                 <div class="col-10">
                     <div class="display-4">Et ensemble on s'est lancé dans ce projet !</div>
+                    <p class="h4 p-4"> Un roadtrip en Van aménagé de Toulon à Lisbonne.</p>
                 </div>
             </div>
             <div class="row p-4"></div>
@@ -176,7 +178,7 @@
                 <p>Merci pour vôtre visite et bonne lecture !
                 </p>
                 <p class="lead">
-                    <a class="btn btn-primary btn-lg"
+                    <a class="btn btn-primary btn-lg zoom-in"
                         href="https://www.paypal.com/donate/?hosted_button_id=95JFT8ZQEYU6C" role="button"><i
                             class="fa-brands fa-paypal p-3"></i>FAIRE UN DON<i
                             class="fa-solid fa-van-shuttle p-3"></i></a>
@@ -193,9 +195,6 @@
 
                 <div class="row p-2"></div>
                 <div class="row hideme p-4 text-light justify-content-center text-center ">
-                    <div class="col-sm-12 p-5 text-center text-light ">
-                        <p class="display-5 ">Notre passion pour la musique </p>
-                    </div>
                     <div class="col text-center p-4 ">
                         <iframe style="border-radius:12px"
                             src="https://open.spotify.com/embed/playlist/6D0kSuy23O8oZKgz6wFzXi?utm_source=generator"
