--- a/photographie.html
+++ b/photographie.html
@@ -40,10 +40,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link zoom-in" href="photographie.html">PHOTOGRAPHIE</a>
-                    </li><li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link zoom-in " href="about.html">ABOUT</a>
-                    </li><li class="nav-item">
-                        <a class="nav-link zoom-in" href="about.html">ABOUT
                     </li>
                 </ul>
                 <span class="navbar-text" style="font-size:20px;">
